--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
                 command: python manage.py runserver 0.0.0.0:8000
                 volumes:
                         - .:/code
+                        - /home/mike/ge_data:/data
                 ports:
                         - "8000:8000"
                 depends_on:
