Do database migration before running server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
                 image: postgres
         web:
                 build: .
-                command: python manage.py runserver 0.0.0.0:8000
+                command: >
+                    /bin/bash -c "python manage.py migrate &&
+                                  python manage.py runserver 0.0.0.0:8000"
                 volumes:
                         - .:/code
                         - /home/mike/ge_data:/data
