--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,7 @@ services:
                         - "8000:8000"
                 depends_on:
                         - db
+                        - mq
 
+        mq:
+                image: rabbitmq
