--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django>=2.0,<3.0
 psycopg2>=2.7,<3.0
-celery
+celery>=4.3
+django-celery-results
+pandas
 -e git://github.com/mfschmidt/PyGEST.git#egg=PyGEST
-
