added missing celery_progress files and altered the data path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
                 command: >
                         /bin/bash -c "celery worker --app ge_data_manager --hostname=mq --broker "amqp://guest@mq" --loglevel=INFO --events"
                 volumes:
-                        - /home/mike/ge_data:/data
+                        - /var/ge_data:/data
                 depends_on:
                         - mq
