--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         web:
                 build: .
                 command: >
-                        /bin/bash -c "python manage.py migrate &&
+                        /bin/bash -c "python manage.py makemigrations && python manage.py migrate &&
                                       python manage.py runserver 0.0.0.0:8000"
                 ports:
                         - "8000:8000"
