--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-src/
+/src/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
