--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+scipy = "*"
+psycopg2-binary = ">=2.7,<3.0"
+celery = ">=4.3"
+django-celery-results = "*"
 numpy = "*"
-
-[requires]
-python_version = "3.6"
+pandas = "*"
+matplotlib = "*"
+seaborn = "*"
+pytz = "*"
+Django = "<3.0,>=2.2.10"
+zipp = {path = "/home/mike/Projects/PyGEST"}
