--- a/Pipfile
+++ b/Pipfile
@@ -8,14 +8,16 @@ verify_ssl = true
 [packages]
 scipy = "*"
 psycopg2-binary = ">=2.7,<3.0"
-celery = ">=4.3"
 django-celery-results = "*"
+celery = "<5.0,>=4.3"
 numpy = "*"
 pandas = "*"
 matplotlib = "*"
 seaborn = "*"
 pytz = "*"
 Django = "<3.0,>=2.2.10"
+vine = "*"
+psycopg2 = "<3.0,>=2.7"
 
 [packages.6c72bad]
 path = "/home/mike/Projects/PyGEST"
